[gd_scene load_steps=15 format=3 uid="uid://dj0xtehofxn4x"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_y1br0"]
[ext_resource type="Texture2D" uid="uid://cwbd7r3ggojrj" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_lxi3m"]
[ext_resource type="Texture2D" uid="uid://booy8l38fslfl" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_i0fds"]
[ext_resource type="Texture2D" uid="uid://06nhpvu5orok" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="3_k1oew"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5v4f4"]
atlas = ExtResource("2_lxi3m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdesa"]
atlas = ExtResource("2_lxi3m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwue8"]
atlas = ExtResource("3_i0fds")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wk0k"]
atlas = ExtResource("3_k1oew")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl5er"]
atlas = ExtResource("3_k1oew")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyp3p"]
atlas = ExtResource("3_k1oew")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp7gg"]
atlas = ExtResource("3_k1oew")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4xt7c"]
animations = [{
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_5v4f4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdesa")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwue8")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wk0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl5er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyp3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp7gg")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l0nxq"]
size = Vector2(12, 13)

[sub_resource type="CircleShape2D" id="CircleShape2D_eobp3"]
radius = 7.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 30
script = ExtResource("1_y1br0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_4xt7c")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.768033

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_l0nxq")

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_eobp3")
debug_color = Color(0.901961, 0, 0.12549, 0.419608)

[node name="RemoteCamera" type="RemoteTransform2D" parent="."]

[node name="KnockRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(10, 0)
collision_mask = 4

[node name="KnockLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-10, 0)
collision_mask = 4

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
